[package]
name = "myrustybits_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
microbit-v2 = "0.14.0"
# nrf52833-hal = "0.17.1"
nrf52833-pac = "0.12.2"
panic-halt = "0.2.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rtt-target = "0.5.0"
